--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -14,10 +15,10 @@
 }
 
 .header-area {
-	height: 600px;
-	text-align: center;
-	color: #fff;
-	margin: 50px 0;
+    height: 600px;
+    text-align: center;
+    color: #fff;
+    margin: 50px 0;
 }
 
 .header-title {
@@ -61,25 +62,27 @@
 }
 
 .categories-heading {
-	color: #F00;
-	text-align: center;
-	font-family: Inter;
-	font-size: 88px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: normal;
-	margin-bottom: 30px;
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 88px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 30px;
 }
+
 .categories-pera {
-	color: #F00;
-	text-align: center;
-	font-family: Inter;
-	font-size: 24px;
-	font-style: normal;
-	font-weight: 500;
-	line-height: normal;
-	margin-bottom: 10px;
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 10px;
 }
+
 .categories-head {
     color: #070211;
     text-align: center;
@@ -89,12 +92,33 @@
     font-weight: 700;
     line-height: normal;
 }
+
 /* .categories-img {
     width: 802.9px;
     height: 494.819px;
     flex-shrink: 0;
 } */
 .categories-content {
-	margin-top: 70px;
-	margin-bottom: 35px;
+    margin-top: 70px;
+    margin-bottom: 35px;
 }
+
+/* welcome started */
+#welcome {
+    position: relative;
+    margin: 100px 0;
+}
+
+.welcome-content {
+    display: flex;
+    position: absolute;
+    top: 0px;
+}
+
+color: #FFF;
+font-family: Merriweather;
+font-size: 64px;
+font-style: normal;
+font-weight: 900;
+line-height: 88px; /* 137.5% */
+letter-spacing: 7.04px;
