--- a/style.css
+++ b/style.css
@@ -159,3 +159,11 @@
 	padding-top: 100px;
 	padding-left: 70px;
 }
+
+/* contact  */
+#contact {
+	text-align: center;
+}
+.contact-area {
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+}
