--- a/style.css
+++ b/style.css
@@ -127,43 +127,85 @@
 }
 
 .party-para {
-	color: rgba(255, 255, 255, 0.80);
-	font-family: Inter;
-	font-size: 18px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: 30px;
-	padding-top: 35px;
+    color: rgba(255, 255, 255, 0.80);
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 35px;
 }
 
 .party-button {
-	color: #FFF;
-	text-align: center;
-	font-family: Inter;
-	font-size: 20px;
-	font-style: normal;
-	font-weight: 700;
-	line-height: normal;
-	text-transform: uppercase;
-	background: transparent;
-	border: navajowhite;
-	padding: 30px 30px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    background: transparent;
+    border: navajowhite;
+    padding: 30px 30px;
 }
+
 .party-text {
-	text-align: left;
-	width: 700px;
-	padding-left: 125px;
-	padding-top: 124px;
+    text-align: left;
+    width: 700px;
+    padding-left: 125px;
+    padding-top: 124px;
 }
+
 .party-img {
-	padding-top: 100px;
-	padding-left: 70px;
+    padding-top: 100px;
+    padding-left: 70px;
 }
 
 /* contact  */
 #contact {
-	text-align: center;
+    text-align: center;
 }
+
 .contact-area {
-    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+	background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+	padding-top: 92px;
+	padding-bottom: 70px;
+	border-radius: 16px;
+}
+
+.red {
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    /* 175% */
+    text-transform: capitalize;
+}
+
+.contact-heading {
+    color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    text-transform: capitalize;
+}
+
+.contact-btn {
+	display: inline-flex;
+	padding: 16px 32px;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	border-radius: 8px;
+	background: #F00;
+	border: none;
+	margin-top: 30px;
+    color: #fff;
+    font-weight: 500;
 }
