--- a/style.css
+++ b/style.css
@@ -168,10 +168,10 @@
 }
 
 .contact-area {
-	background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
-	padding-top: 92px;
-	padding-bottom: 70px;
-	border-radius: 16px;
+    /* background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%); */
+    padding-top: 92px;
+    padding-bottom: 70px;
+    border-radius: 16px;
 }
 
 .red {
@@ -197,15 +197,106 @@
 }
 
 .contact-btn {
-	display: inline-flex;
-	padding: 16px 32px;
-	justify-content: center;
-	align-items: center;
-	gap: 10px;
-	border-radius: 8px;
-	background: #F00;
-	border: none;
-	margin-top: 30px;
+    display: inline-flex;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #F00;
+    border: none;
+    margin-top: 30px;
     color: #fff;
     font-weight: 500;
+}
+
+/* comeing-area */
+
+#coming {
+    margin-top: 70px;
+    margin-bottom: 50px;
+}
+
+.comeing-area {
+    display: flex;
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+}
+
+.top-content {
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    width: 205.448px;
+    height: 28.7px;
+    flex-shrink: 0;
+    margin-bottom: 15px;
+}
+
+.base-content {
+    width: 325.54px;
+    height: 59.378px;
+    flex-shrink: 0;
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+}
+
+.down-para {
+    width: 393px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    margin-top: 38px;
+}
+
+.content-img {
+    flex-shrink: 0;
+    border-radius: 463px;
+    border: 15px solid #F00;
+}
+
+.content-img {
+    flex-shrink: 0;
+    border-radius: 364.844px;
+    /* background: url("resources/Ellipse\ 1.png"), lightgray -91.279px 0px / 150.038% 100% no-repeat; */
+}
+
+.setion {
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.setion-para {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+    width: 276px;
+}
+.grup-img {
+    width: 140px;
+    height: 140px;
+    flex-shrink: 0;
+}
+.content-img {
+	margin: 0px 100px;
+}
+.content-img img {
+	margin: 30px;
 }
