--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@
     width: 1320px;
     max-width: 1440px;
     margin: 0 auto;
-    /* border-radius: 16px; */
-    /* background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%); */
 }
 
 .header-area {
@@ -48,10 +46,15 @@
     left: 32%;
 }
 
+.header-background-img {
+    background-image: url("resources/Banner\ Image.png");
+}
+
 .overlay {
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    /* background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%); */
     width: 100%;
     height: 100%;
+    border-radius: 16px;
     border-radius: 16px;
 
 }
@@ -168,7 +171,7 @@
 }
 
 .contact-area {
-    /* background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%); */
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     padding-top: 92px;
     padding-bottom: 70px;
     border-radius: 16px;
@@ -219,7 +222,7 @@
 
 .comeing-area {
     display: flex;
-    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    /* background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%); */
 }
 
 .top-content {
@@ -280,23 +283,73 @@
     font-weight: 700;
     line-height: normal;
 }
+
 .setion-para {
     color: rgba(7, 2, 17, 0.60);
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 32px; /* 160% */
+    line-height: 32px;
+    /* 160% */
     width: 276px;
 }
+
 .grup-img {
     width: 140px;
     height: 140px;
     flex-shrink: 0;
 }
+
 .content-img {
-	margin: 0px 100px;
+    margin-right: 145px;
+    margin-left: 50px;
 }
+
 .content-img img {
-	margin: 30px;
+    margin: 30px;
+}
+
+.mt {
+    margin-top: 75px;
+}
+
+
+/* sale */
+.sale-area {
+    text-align: center;
+}
+
+.sale-head {
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.sales {
+    color: #F00;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+}
+
+.sale-para {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    /* 160% */
+}
+.headiing {
+	width: 100px;
+	padding-left: 41%;
 }
