--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap');
 
 * {
     margin: 0;
@@ -329,7 +330,7 @@
     line-height: normal;
 }
 
-.sales {
+.sales span {
     color: #F00;
     text-align: center;
     font-family: Merriweather;
@@ -339,17 +340,28 @@
     line-height: normal;
 }
 
-.sale-para {
-    color: rgba(7, 2, 17, 0.60);
-    text-align: center;
-    font-family: Inter;
-    font-size: 20px;
+.sales {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 72px;
     font-style: normal;
-    font-weight: 500;
-    line-height: 32px;
-    /* 160% */
+    font-weight: 900;
+    line-height: normal;
 }
+
+.sale-para {
+	color: rgba(7, 2, 17, 0.60);
+	text-align: center;
+	font-family: Inter;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 32px;
+	padding: 0 219px;
+	margin-top: 50px;
+}
+
 .headiing {
-	width: 100px;
-	padding-left: 41%;
+    width: 100px;
+    padding-left: 40%;
 }
